// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fragments "ACCORDION_FRAGMENT" matches snapshot: ACCORDION_FRAGMENT 1`] = `
"
...on AccordionBlock {
    __typename
    id
    accordion {
        id 
        heading
        accordionItems {
            id
            heading
            content
        }
    }
}
"
`;

exports[`Fragments "CONVERSION_PANEL_FRAGMENT" matches snapshot: CONVERSION_PANEL_FRAGMENT 1`] = `
"
...on ConversionPanelBlock {
    id
    __typename
    conversionPanel {
        id
        heading
        content
        callToAction {
            
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

        }
    }
}
"
`;

exports[`Fragments "CTA_FRAGMENT" matches snapshot: CTA_FRAGMENT 1`] = `
"
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color
"
`;

exports[`Fragments "FEATURE_GRID_FRAGMENT" matches snapshot: FEATURE_GRID_FRAGMENT 1`] = `
"
...on FeatureGridBlock {
    id
    __typename
    featureGrid {
        id 
        heading
        featureTiles {
            id
            heading
            image {
                
id
alt
url
width
height
base64

            }
            content
        }
    }
}
"
`;

exports[`Fragments "FEATURED_MEDIA_FRAGMENT" matches snapshot: FEATURED_MEDIA_FRAGMENT 1`] = `
"
...on FeaturedMediaBlock {
    id
    __typename
    featuredMedia {
        id
        heading 
        content
        assetType
        image {
            
id
alt
url
width
height
base64

        }
        video {
            
id
url
placeholderImage {
    
id
alt
url
width
height
base64

}

        }
        callToAction {
            
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

        }
    }
}
"
`;

exports[`Fragments "HERO_FRAGMENT" matches snapshot: HERO_FRAGMENT 1`] = `
"
...on HeroBlock {
    __typename
    id
    hero {
        id
        heading
        subheading
        content
        cta {
            type
            ctaButtons {
                id
                callToAction {
                    
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

                }
            }
            ctaTiles {
                id
                callToActionTile {
                    id
                    linkType
                    label
                    
internalLink {
    id
    title
    slug
}

                    externalLink
                    icon {
                        
id
alt
url
width
height
base64

                    }
                }
            }
        }
    }
}
"
`;

exports[`Fragments "ICON_TILE__GRID_FRAGMENT" matches snapshot: ICON_TILE__GRID_FRAGMENT 1`] = `
"
...on IconTileGridBlock {
    id
    __typename
    iconTileGrid {
        id
        heading
        content
        iconTiles {
            id
            label
            icon {
                
id
alt
url
width
height
base64

            }
        }
        callToAction {
            
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

        }
    }
}
"
`;

exports[`Fragments "IMAGE_FRAGMENT" matches snapshot: IMAGE_FRAGMENT 1`] = `
"
id
alt
url
width
height
base64
"
`;

exports[`Fragments "INTERNAL_LINK_FRAGMENT" matches snapshot: INTERNAL_LINK_FRAGMENT 1`] = `
"
internalLink {
    id
    title
    slug
}
"
`;

exports[`Fragments "MENU_ITEMS_FRAGMENT" matches snapshot: MENU_ITEMS_FRAGMENT 1`] = `
"
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
overridePageName
internalCustomLabel
"
`;

exports[`Fragments "META_FRAGMENT" matches snapshot: META_FRAGMENT 1`] = `
"
meta {
    title
    description
    image {
        
id
alt
url
width
height
base64

    }
}
"
`;

exports[`Fragments "PROCESS_FRAGMENT" matches snapshot: PROCESS_FRAGMENT 1`] = `
"
...on ProcessBlock {
    id
    __typename
    process {
        id
        steps {
            id
            heading
            content
        }
        callToAction {
            
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

        }
    }
}
"
`;

exports[`Fragments "SPECIALS_FRAGMENT" matches snapshot: SPECIALS_FRAGMENT 1`] = `
"
...on SpecialBlock {
    id
    __typename
    special {
        id
        heading
        subheading
        content
        sideBox
        
textGrid {
    id
    heading
    content
    textTiles {
        id
        text
    }
    callToAction {
        
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

    }
}

    }
}
"
`;

exports[`Fragments "SWITCHBACK_FRAGMENT" matches snapshot: SWITCHBACK_FRAGMENT 1`] = `
"
...on SwitchbackBlock {
    __typename
    id
    switchback {
        id
        image {
            
id
alt
url
width
height
base64

        }
        imageSide
        heading
        content
        callToAction {
            
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

        }
    }
}
"
`;

exports[`Fragments "TEXT_GRID_FRAGMENT" matches snapshot: TEXT_GRID_FRAGMENT 1`] = `
"
...on TextGridBlock {
    __typename
    id
    
textGrid {
    id
    heading
    content
    textTiles {
        id
        text
    }
    callToAction {
        
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

    }
}

}
"
`;

exports[`Fragments "TILE_GRID_FRAGMENT" matches snapshot: TILE_GRID_FRAGMENT 1`] = `
"
...on TileGridBlock {
    id
    __typename
    tileGrid {
        id
        heading 
        content
        tiles {
            id
            heading
            content
        }
        callToAction {
            
id
label
linkType

internalLink {
    id
    title
    slug
}

externalLink
color

        }
    }
}
"
`;

exports[`Fragments "VIDEO_FRAGMENT" matches snapshot: VIDEO_FRAGMENT 1`] = `
"
id
url
placeholderImage {
    
id
alt
url
width
height
base64

}
"
`;
